    (Closes: #813395)
  * debian/patches/12_upstream_hurd-no-pthread_stack_min.patch:
    Do not check for PTHREAD_STACK_MIN on GNU/Hurd (Closes: #823049)
  * debian/control: Updated, secure Vcs-Git and Vcs-Browser URI
  * Bump Standards-Version to 3.9.8 (no changes needed)
  * Bump debhelper compatibility version to 9
  * debian/patches/20_hacks_maze_xpm_libs.patch: Deleted (obsolete)

 -- Tormod Volden <debian.tormod@gmail.com>  Thu, 07 Apr 2016 22:28:44 +0200

xscreensaver (5.34-2) unstable; urgency=medium

  * Fix sort order in hacks/Makefile (for reproducible builds)
    (Closes: #819595)
  * Disable Easter egg about "outdated" version
    (Closes: #819703)

 -- Tormod Volden <debian.tormod@gmail.com>  Tue, 05 Apr 2016 22:53:13 +0200

xscreensaver (5.34-1) unstable; urgency=medium

  * New upstream release 5.34
    - Fixed a crash when hot-swapping monitors while locked.
      (Closes: #802914)
    - Fixed some incorrect output from xscreensaver-command -watch.

 -- Tormod Volden <debian.tormod@gmail.com>  Sun, 25 Oct 2015 09:31:21 +0100

xscreensaver (5.33-1) unstable; urgency=low

  * New upstream release 5.33, changes since 5.30:
    - New hacks, `geodesicgears', `binaryring', `cityflow', `splitflap'
      and `romanboy'.
    - UTF-8 text support (instead of only Latin1) and antialiased text
      on X11 with Xft (instead of only on OSX/iOS) in `fontglide',
      `noseguy', `fliptext', `starwars', and `winduprobot'.
      The other text-displaying hacks (`apple2', `phosphor', `xmatrix',
      and `gltext') also now accept UTF-8 input, though they convert it
      to Latin1 or ASCII. (Closes: #180775)
    - `glplanet' now has both day and night maps, and a sharp terminator.
    - Fixed a transparency glitch in `winduprobot'.
    - Better detection of user activity on modern GNOME systems.
  * xscreensaver*.postrm/postinst/preinst: Remove obsolete parts used in
    lenny->squeeze and potato->woody transitions