@@ -1,3 +1,10 @@
+#
+# This just sets a default. The desktop environment starting
+# xscreensaver should also tell it which command to use, see e.g.
+# https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=778470#25
+# We also offer the intermediate band-aid solution of
+# /usr/share/xscreensaver/xscreensaver-wrapper.sh
+#
 Index: xscreensaver/driver/XScreenSaver.ad.in
 ===================================================================
 --- xscreensaver.orig/driver/XScreenSaver.ad.in	2015-07-19 11:29:34.000000000 +0200
