@@ -1,3 +1,6 @@
+#
+# Prompts more consistent with the Debian experience (?)
+#
 Index: xscreensaver-git/driver/XScreenSaver.ad.in
 ===================================================================
 --- xscreensaver-git.orig/driver/XScreenSaver.ad.in	2016-05-28 19:06:03.673677107 +0200
